// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSourceWizard renders correctly with sourceTypes 1`] = `
<SourceAddModal
  applicationTypes={
    Array [
      Object {
        "display_name": "Catalog",
        "id": "1",
        "name": "catalog/overwiev",
      },
      Object {
        "display_name": "Cost Management",
        "id": "2",
        "name": "koku/overwiev",
      },
    ]
  }
  disableAppSelection={false}
  disableHardcodedSchemas={false}
  onCancel={[Function]}
  onSubmit={[Function]}
  sourceTypes={
    Array [
      Object {
        "id": "1",
        "name": "openshift",
        "product_name": "OpenShift Container Platform",
        "schema": Object {
          "fields": Array [
            Object {
              "component": "text-field",
              "name": "field",
            },
          ],
          "title": "openshift",
        },
      },
      Object {
        "id": "2",
        "name": "amazon",
        "product_name": "Amazon Web Services",
        "schema": Object {
          "fields": Array [
            Object {
              "component": "text-field",
              "name": "field",
            },
          ],
          "title": "AWS",
        },
      },
      Object {
        "id": "3",
        "name": "ansible-tower",
        "product_name": "Ansible Tower",
        "schema": Object {
          "fields": Array [
            Object {
              "component": "text-field",
              "name": "field",
            },
          ],
          "title": "AnsibleTower",
        },
      },
    ]
  }
  values={Object {}}
/>
`;

exports[`AddSourceWizard renders correctly without sourceTypes 1`] = `
<SourceAddModal
  applicationTypes={
    Array [
      Object {
        "display_name": "Catalog",
        "id": "1",
        "name": "catalog/overwiev",
      },
      Object {
        "display_name": "Cost Management",
        "id": "2",
        "name": "koku/overwiev",
      },
    ]
  }
  disableAppSelection={false}
  disableHardcodedSchemas={false}
  onCancel={[Function]}
  onSubmit={[Function]}
  values={Object {}}
/>
`;
